--- a/SharpEditorAvalonia/Windows/SharpDocumentEditor.axaml
+++ b/SharpEditorAvalonia/Windows/SharpDocumentEditor.axaml
@@ -9,7 +9,8 @@
 			 xmlns:designer="clr-namespace:SharpEditorAvalonia.Designer"
 			 x:DataType="local:SharpDocumentEditor"
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="SharpEditorAvalonia.Windows.SharpDocumentEditor">
+             x:Class="SharpEditorAvalonia.Windows.SharpDocumentEditor"
+			 FontFamily="{StaticResource ApplicationFont}">
 		
 	<DockPanel Background="#2d2d30">
 
@@ -38,7 +39,8 @@
 				ToolTip.Tip="Text Zoom Level"
 				KeyDown="TextZoomBoxKeyDown"
 				PointerWheelChanged="TextZoomBoxMouseWheel"
-				LostFocus="TextZoomBoxLostFocus"/>
+				LostFocus="TextZoomBoxLostFocus"
+				ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
 			<StackPanel Grid.Column="1" Orientation="Horizontal" Margin="20,0">
 				<TextBlock Name="CursorLineText" Width="50" Margin="20,0" Text="Line" VerticalAlignment="Center"/>
 				<TextBlock Name="CursorColText" Width="50" Margin="20,0" Text="Col" VerticalAlignment="Center"/>
@@ -115,7 +117,7 @@
 				Name="textEditor"
 				Background="#1e1e1e"
 				Foreground="White"
-				FontFamily="Consolas"
+				FontFamily="{StaticResource EditorFont}"
 				FontSize="14"
 				HorizontalScrollBarVisibility="Auto"
 				VerticalScrollBarVisibility="Auto"
@@ -136,6 +138,7 @@
 							<StackPanel.Styles>
 								<Style Selector="TextBlock">
 									<Setter Property="Foreground" Value="White"/>
+									<Setter Property="FontFamily" Value="{StaticResource ApplicationFont}"/>
 								</Style>
 							</StackPanel.Styles>
 						</StackPanel>
