Implement styling for editor.
Editor is now mostly complete in functionality and looks. Remaining issues include: flicker when loading document page into designer, cannot scroll error popup with mouse wheel, settings window outline not ideal, styling not unified for application skins.

--- a/SharpEditorAvalonia/Documentation/DocumentationWindow.axaml
+++ b/SharpEditorAvalonia/Documentation/DocumentationWindow.axaml
@@ -14,6 +14,8 @@
 		FontFamily="{StaticResource ApplicationFont}">
 
 	<Window.Styles>
+		<StyleInclude Source="/AppStyles.axaml"/>
+
 		<Style Selector="TextBlock">
 			<Setter Property="FontSize" Value="13.5"/> <!-- x1.0 -->
 		</Style>
