--- a/SharpEditorAvalonia/Windows/SharpEditorWindow.axaml
+++ b/SharpEditorAvalonia/Windows/SharpEditorWindow.axaml
@@ -7,8 +7,13 @@
         x:Class="SharpEditorAvalonia.Windows.SharpEditorWindow"
 		x:DataType="local:SharpEditorWindow"
         Title="SharpEditorWindow"
+		Icon="/Images/Icon.ico"
 		Closing="OnWindowClosing"
-		FontFamily="{StaticResource ApplicationFont}">
+		FontFamily="{StaticResource ApplicationFont}" FontSize="{StaticResource AppUIFontSize}">
+
+	<Window.Styles>
+		<StyleInclude Source="/AppStyles.axaml"/>
+	</Window.Styles>
 
 	<Window.KeyBindings>
 		<KeyBinding Gesture="F1" Command="{Binding HelpCommand}"/>
@@ -25,7 +30,7 @@
 
 	<DockPanel Background="#2d2d30">
 
-		<Menu DockPanel.Dock="Top"
+		<Menu DockPanel.Dock="Top" Padding="3"
 			Background="#2d2d30" Foreground="LightGray">
 			
 			<MenuItem Header="_File">
@@ -132,19 +137,25 @@
 				<MenuItem Header="Wrap Lines" Name="WrapLinesButton" Click="ToggleMenuItemCheckBox">
 					<MenuItem.Icon>
 						<!--<Image Source="/Images/WordWrap2.png"/>-->
-						<CheckBox IsChecked="{Binding DataManager.WrapLines}" IsHitTestVisible="False"/>
+						<CheckBox IsChecked="{Binding DataManager.WrapLines}" IsHitTestVisible="False">
+							<Image Source="/Images/WordWrap2.png"/>
+						</CheckBox>
 					</MenuItem.Icon>
 				</MenuItem>
 				<MenuItem Header="Show Line Numbers" Name="ShowLineNumbersButton" Click="ToggleMenuItemCheckBox">
 					<MenuItem.Icon>
 						<!--<TextBlock Width="16" TextAlignment="Center" Foreground="LightGray">#</TextBlock>-->
-						<CheckBox IsChecked="{Binding DataManager.ShowLineNumbers}" IsHitTestVisible="False"/>
+						<CheckBox IsChecked="{Binding DataManager.ShowLineNumbers}" IsHitTestVisible="False">
+							<TextBlock Width="16" TextAlignment="Center" VerticalAlignment="Center" Foreground="LightGray">#</TextBlock>
+						</CheckBox>
 					</MenuItem.Icon>
 				</MenuItem>
 				<MenuItem Header="Show End of Line" Name="ShowEndOfLineButton" Click="ToggleMenuItemCheckBox">
 					<MenuItem.Icon>
 						<!--<TextBlock Width="16" TextAlignment="Center" Foreground="LightGray">¶</TextBlock>-->
-						<CheckBox IsChecked="{Binding DataManager.ShowEndOfLine}" IsHitTestVisible="False"/>
+						<CheckBox IsChecked="{Binding DataManager.ShowEndOfLine}" IsHitTestVisible="False">
+							<TextBlock Width="16" TextAlignment="Center" VerticalAlignment="Center" Foreground="LightGray">¶</TextBlock>
+						</CheckBox>
 					</MenuItem.Icon>
 				</MenuItem>
 			</MenuItem> <!-- End of View menu -->
@@ -225,13 +236,10 @@
 			DockPanel.Dock="Top"
 			Orientation="Horizontal"
 			Background="#2d2d30"
-			Height="25">
+			Height="25" Margin="2">
 			
 			<Menu>
-				<MenuItem>
-					<MenuItem.Header>
-						<Image Source="/Images/New2.png"/>
-					</MenuItem.Header>
+				<MenuItem Classes="toolbarDropDownMenu">
 					<MenuItem.Icon>
 						<Image Source="/Images/New2.png"/>
 					</MenuItem.Icon>
@@ -312,12 +320,12 @@
 			<Separator Margin="5,0" Background="#55555a"/>
 			<ToggleButton Name="ToolbarShowDesignerButton" ToolTip.Tip="Toggle Show Designer"
 				IsChecked="{Binding DesignerVisible}">
-				<Image Source="/Images/Designer4.png" Height="16" Margin="4,2"/>
+				<Image Source="/Images/Designer4.png" Height="16" Margin="2,2"/>
 			</ToggleButton>
 		
 		</StackPanel>
 			
-		<Grid Name="MainGrid" Background="#2d2d30">
+		<Grid Name="MainGrid" Background="#2d2d30" Margin="0,5,0,0">
 
 			<TabControl Name="EditorTabControl" Classes="draggable" Padding="0" Margin="0" BorderThickness="0">
 				<TabControl.Styles>
