--- a/SharpEditorAvalonia/App.axaml
+++ b/SharpEditorAvalonia/App.axaml
@@ -10,12 +10,10 @@
     </Application.Styles>
 
 	<Application.Resources>
+		<x:Double x:Key="AppUIFontSize">12</x:Double>
 		<x:Double x:Key="ControlContentThemeFontSize">12</x:Double>
 		
-		<FontFamily x:Key="NotoSansFont">avares://SharpEditorAvalonia/Assets/Fonts#Noto Sans</FontFamily>
-		<FontFamily x:Key="OpenSansFont">avares://SharpEditorAvalonia/Assets/Fonts#Open Sans</FontFamily>
 		<FontFamily x:Key="ApplicationFont">avares://SharpEditorAvalonia/Assets/Fonts#Open Sans</FontFamily>
-		<FontFamily x:Key="EditorFontCustom">avares://SharpEditorAvalonia/Assets/Fonts#DejaVu Sans Mono</FontFamily>
-		<FontFamily x:Key="EditorFont">Consolas</FontFamily>
+		<FontFamily x:Key="EditorFont">avares://SharpEditorAvalonia/Assets/Fonts#Roboto Mono</FontFamily>
 	</Application.Resources>
 </Application>
