--- a/SharpEditorAvalonia/Designer/DesignerArea.axaml
+++ b/SharpEditorAvalonia/Designer/DesignerArea.axaml
@@ -10,7 +10,7 @@
 	<!-- Command bindings should be included somehow -->
 
 	<DockPanel Background="#2d2d30" KeyDown="DesignerKeyHandler">
-		<StackPanel DockPanel.Dock="Top" Background="#2d2d30" Margin="2" HorizontalAlignment="Center" Orientation="Horizontal">
+		<StackPanel DockPanel.Dock="Top" Background="#2d2d30" Margin="0,2,0,5" HorizontalAlignment="Center" Orientation="Horizontal">
 			<Button Command="{Binding BackCommand}"
 					ToolTip.Tip="Previous Page">
 				<Image Source="../Images/Previous.png" Height="32"/>
@@ -32,7 +32,8 @@
 						TextAlignment="Center"
 						Text="0"
 						ToolTip.Tip="Current Page Number"
-						ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
+						ScrollViewer.VerticalScrollBarVisibility="Disabled"
+						ScrollViewer.HorizontalScrollBarVisibility="Disabled"/>
 				<TextBlock Text="/" Padding="5,0" VerticalAlignment="Center" Foreground="LightGray"/>
 				<TextBlock Name="PageCountTextBlock"
 						   VerticalAlignment="Center" Foreground="LightGray"
@@ -61,7 +62,8 @@
 					TextAlignment="Center"
 					Text="100%"
 					ToolTip.Tip="Designer Zoom Level"
-					ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
+					ScrollViewer.VerticalScrollBarVisibility="Disabled"
+					ScrollViewer.HorizontalScrollBarVisibility="Disabled"/>
 			<Button Command="{Binding ZoomWholePageCommand}"
 					ToolTip.Tip="Zoom to Whole Page">
 				<Image Source="../Images/WholePage.png" Height="32"/>
@@ -69,7 +71,7 @@
 			<Rectangle Width="1" Height="28" Margin="5,0" Fill="#55555a"/>
 			<ToggleButton ToolTip.Tip="Display Form Fields in Designer Toggle"
 				IsChecked="{Binding DataManager.DesignerDisplayFields}">
-				<Image Source="../Images/PageFields.png" Height="32" Margin="2"/>
+				<Image Source="../Images/PageFields.png" Height="32"/>
 			</ToggleButton>
 		</StackPanel>
 		<designer:CanvasViewer
