--- a/SharpEditorAvalonia/Documentation/DocumentationPage.axaml
+++ b/SharpEditorAvalonia/Documentation/DocumentationPage.axaml
@@ -5,7 +5,7 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SharpEditorAvalonia.Documentation.DocumentationPage">
 
-	<ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+	<ScrollViewer Name="Scroller" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
 		<DockPanel Name="Panel" Margin="20" MaxWidth="650"/>
 	</ScrollViewer>
 	
