--- a/SharpEditorAvalonia/Windows/LoadingWindow.axaml
+++ b/SharpEditorAvalonia/Windows/LoadingWindow.axaml
@@ -15,17 +15,18 @@
 		SystemDecorations="None"
 		FontFamily="{StaticResource ApplicationFont}"
 		FontSize="12"> <!--Topmost="True"-->
-
+	
 	<DockPanel Margin="4">
 		<TextBlock DockPanel.Dock="Top"></TextBlock>
 		<TextBlock DockPanel.Dock="Bottom" Name="VersionTextBlock" Foreground="Gray" HorizontalAlignment="Left" Padding="6,0,0,0">Version 0.0.0.0</TextBlock>
 		<StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="12,2">
 			<Image Source="/Images/Logo.png" Height="150"/>
 			<TextBlock
+				Margin="0,20,0,0"
 				VerticalAlignment="Center"
 				Foreground="White"
 				FontSize="50"
-				FontFamily="Courier New">
+				FontFamily="{StaticResource TypeWriterFont}">
 				Sharp<LineBreak/>Sheets
 			</TextBlock>
 		</StackPanel>
