Fix uninitialised LastFileDirectory value.
LastFileDirectory now defaults to the users SpecialFolder.MyDocuments path if no value has been specified.

--- a/SharpEditor/Designer/DesignerArea.axaml
+++ b/SharpEditor/Designer/DesignerArea.axaml
@@ -23,7 +23,7 @@
 				<TextBox
 						x:Name="PageNumber"
 						Width="50" Height="30"
-						Background="#333337"
+						Background="#1e1e1e"
 						Foreground="LightGray"
 						VerticalContentAlignment="Center"
 						KeyDown="PageNumberKeyDown"
@@ -53,7 +53,7 @@
 					x:Name="CanvasZoomLevelText"
 					Width="75" Height="30"
 					Margin="10,0"
-					Background="#333337"
+					Background="#1e1e1e"
 					Foreground="LightGray"
 					VerticalContentAlignment="Center"
 					KeyDown="CanvasZoomPreviewKeyDown"
