Add DPI scaling to CanvasViewer.
CanvasViewer now has a DPI attribute which can be adjusted to change the scaling of the canvas content. A default value of 96 has been used. Unsure how this will interact with screens of different resolutions, as Avalonia does already attempt to account for this (apparently). However, the adjustment will still allow fine-tuning, even if it does not match up numerically on all systems (needs further testing to be certain of behaviour).

--- a/SharpEditor/Windows/SettingsWindow.axaml
+++ b/SharpEditor/Windows/SettingsWindow.axaml
@@ -47,6 +47,15 @@
 							Content="Show Designer by Default"
 							Foreground="White" HorizontalAlignment="Left" Margin="4"
 							IsChecked="{Binding DesignerViewerOpenDefault}"/>
+						<Grid Margin="4">
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="Auto"/>
+								<ColumnDefinition Width="10"/>
+								<ColumnDefinition Width="*"/>
+							</Grid.ColumnDefinitions>
+							<TextBlock Grid.Column="0" Text="Designer Dots Per Inch (DPI)" VerticalAlignment="Center"/>
+							<TextBox Grid.Column="2" x:Name="DPITextBox" LostFocus="OnDPITextLostFocus" KeyDown="DPITextBoxKeyDown"/>
+						</Grid>
 					</StackPanel>
 				</HeaderedContentControl>
 
