ToolTip bug fix.
Issue where text editor tooltip was not displaying at the bottom of the screen has been fixed. The issue was that the tooltip was being opened under the cursor, and then immediately closed (or something similar). Offsetting the tooltip horizontally by a small amount has fixed this.

--- a/SharpEditor/Windows/SharpDocumentEditor.axaml
+++ b/SharpEditor/Windows/SharpDocumentEditor.axaml
@@ -120,6 +120,8 @@
 				VerticalScrollBarVisibility="Auto"
 				KeyDown="OnPreviewKeyDown"
 				ToolTip.Placement="Pointer"
+				ToolTip.HorizontalOffset="20"
+				ToolTip.VerticalOffset="10"
 				> <!--PointerWheelChanged="OnTextPreviewMouseWheel"-->
 				<avaloniaEdit:TextEditor.KeyBindings>
 					<KeyBinding Gesture="Ctrl+D" Command="{Binding DuplicateCommand}"/>
