Hack fix for padding issue in SettingsWindow.
The last HeaderedContentControl is not being included properly in the ScrollViewer viewport. Adding a margin to the botton of the StackPanel works as a fix for now. The ScrollViewer seems to want to match up the the HeaderedContentControl content, rather than the border. Why is this happening?

--- a/SharpEditor/Windows/SettingsWindow.axaml
+++ b/SharpEditor/Windows/SettingsWindow.axaml
@@ -8,8 +8,8 @@
         mc:Ignorable="d"
         Title="Settings"
 		Icon="/Images/Icon.ico"
-		d:DesignWidth="600" d:DesignHeight="450"
-		Width="600" Height="450"
+		d:DesignWidth="600" d:DesignHeight="500"
+		Width="600" Height="500"
 		MinWidth="300" MinHeight="200"
 		WindowStartupLocation="CenterOwner"
 		ShowInTaskbar="False"
@@ -35,7 +35,7 @@
 		<ScrollViewer Padding="10"
 			HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto"
 			KeyboardNavigation.TabNavigation="Cycle">
-			<StackPanel Orientation="Vertical">
+			<StackPanel Orientation="Vertical" Margin="0 0 0 50">
 
 				<HeaderedContentControl Classes="settings" Header="Designer" Padding="8">
 					<StackPanel>
