--- a/SharpEditor/AppStyles.axaml
+++ b/SharpEditor/AppStyles.axaml
@@ -255,7 +255,7 @@
 							</ContentPresenter>
 							<TextBlock x:Name="PART_InputGestureText"
 									   Grid.Column="3"
-									   VerticalAlignment="Center"
+									   VerticalAlignment="Center" Opacity="0.5"
 									   Text="{TemplateBinding InputGesture,
 												  Converter={StaticResource KeyGestureConverter}}"/>
 							<Path Name="rightArrow"
@@ -307,6 +307,9 @@
 
 		<Style Selector="^:disabled">
 			<Setter Property="Opacity" Value="0.5"/>
+		</Style>
+		<Style Selector="^:disabled /template/ TextBlock#PART_InputGestureText">
+			<Setter Property="Opacity" Value="1.0"/>
 		</Style>
 
 		<Style Selector="^:toggle /template/ ContentControl#PART_ToggleIconPresenter, ^:radio /template/ ContentControl#PART_ToggleIconPresenter">
