--- a/SharpEditor/Windows/SettingsWindow.axaml
+++ b/SharpEditor/Windows/SettingsWindow.axaml
@@ -3,6 +3,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:managers="using:SharpEditor.DataManagers"
+		xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
+		xmlns:local="using:SharpEditor.Windows"
         x:Class="SharpEditor.Windows.SettingsWindow"
 		x:DataType="managers:SharpDataManager"
         mc:Ignorable="d"
@@ -27,6 +29,10 @@
 		<StyleInclude Source="/SettingsStyles.axaml"/>
 	</Window.Styles>
 
+	<Window.Resources>
+		<local:ColorToStringConverter x:Key="colorToStringConv"/>
+	</Window.Resources>
+		
 	<DockPanel x:Name="MainPanel">
 		<StackPanel DockPanel.Dock="Bottom" Margin="10" Orientation="Horizontal" HorizontalAlignment="Right">
 			<Button Content="OK" Click="ExitClick"/>
@@ -118,6 +124,73 @@
 						Content="Generate Warnings For Licensed Fonts (recommended for any commercial works)"
 						Foreground="White" HorizontalAlignment="Left" Margin="4"
 						IsChecked="{Binding WarnFontLicensing}"/>
+				</HeaderedContentControl>
+				
+				<HeaderedContentControl Classes="settings" Header="Syntax Colors" Padding="8">
+					<StackPanel Orientation="Vertical">
+						<ItemsControl Name="ColorItemsControl" Margin="4">
+							<ItemsControl.ItemTemplate>
+								<DataTemplate x:DataType="local:HighlightColorSetting">
+									<Grid Margin="0, 4">
+										<Grid.ColumnDefinitions>
+											<ColumnDefinition Width="*"/>
+											<ColumnDefinition Width="10"/>
+											<ColumnDefinition Width="*"/>
+											<ColumnDefinition Width="10"/>
+											<ColumnDefinition Width="30"/>
+											<ColumnDefinition Width="10"/>
+											<ColumnDefinition Width="Auto" SharedSizeGroup="B"/>
+											<ColumnDefinition Width="Auto" SharedSizeGroup="C"/>
+										</Grid.ColumnDefinitions>
+							
+										<TextBlock Grid.Column="0" Text="{Binding Name}" VerticalAlignment="Center"/>
+										<TextBox Grid.Column="2" FontFamily="{StaticResource EditorFont}" VerticalContentAlignment="Center">
+											<i:Interaction.Behaviors>
+												<local:LostFocusUpdateBindingBehavior Text="{Binding Color, Converter={StaticResource colorToStringConv}}"/>
+											</i:Interaction.Behaviors>
+										</TextBox>
+										<Border Grid.Column="4">
+											<Border.Background>
+												<SolidColorBrush Color="{Binding Color}"/>
+											</Border.Background>
+										</Border>
+										<CheckBox Grid.Column="6"
+											Content="Bold" VerticalAlignment="Center"
+											Foreground="White" HorizontalAlignment="Left" Margin="4"
+											IsChecked="{Binding Bold}"/>
+										<CheckBox Grid.Column="7"
+											Content="Italic" VerticalAlignment="Center"
+											Foreground="White" HorizontalAlignment="Left" Margin="4"
+											IsChecked="{Binding Italic}"/>
+									</Grid>							
+								</DataTemplate>
+							</ItemsControl.ItemTemplate>
+						</ItemsControl>
+						<Grid Margin="4" HorizontalAlignment="Left">
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="Auto"/>
+								<ColumnDefinition Width="4"/>
+								<ColumnDefinition Width="Auto"/>
+								<ColumnDefinition Width="4"/>
+								<ColumnDefinition Width="Auto"/>
+								<ColumnDefinition Width="4"/>
+								<ColumnDefinition Width="*"/>
+							</Grid.ColumnDefinitions>
+							<Button
+								Content="Apply"
+								Grid.Column="0"
+								Click="ApplyColorsClick"
+								/>
+							<Button
+								Content="Reset"
+								Grid.Column="2"
+								Click="ResetColorsClick"/>
+							<Button
+								Content="Default"
+								Grid.Column="4"
+								Click="DefaultColorsClick"/>
+						</Grid>
+					</StackPanel>
 				</HeaderedContentControl>
 				
 			</StackPanel>
